@@ -1,6 +1,15 @@
 # ChangeLog file for monetdb-java
 # This file is updated with Maddlog
 
+* Thu Dec 14 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
+- In ResultSet.getObject() method added support for retrieving
+  TIMESTAMP WITH TIME ZONE data as java.time.OffsetDateTime object
+  and TIME WITH TIME ZONE as java.time.OffsetTime object.
+  Also methods ResultSetMetaData.getColumnClassName() and
+  ParameterMetaData.getParameterClassName() now return
+  java.time.OffsetDateTime.class for columns of type TIMESTAMP WITH TIME ZONE
+  and java.time.OffsetTime.class for columns of type TIME WITH TIME ZONE.
+
 * Thu Oct 12 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
 - Improved DatabaseMetaData.getSystemFunctions(). It now also returns
   functions: current_sessionid, greatest, ifnull, least, sql_max, sql_min.
